JOORSAND/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Master Process</fullName>
        <description>Needed to create record types.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Converted Without Meeting</fullName>
        </values>
        <values>
            <fullName>Meeting Scheduled</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Annual_Revenue_Bucket__c</fullName>
        <description>The revenue bucket the Lead&apos;s company falls into for segmentation.</description>
        <inlineHelpText>SMB = 0-50M 
MM = 51-500M 
ENT = 500M+</inlineHelpText>
        <label>Annual Revenue Bucket</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SMB</fullName>
                </value>
                <value>
                    <fullName>MM</fullName>
                </value>
                <value>
                    <fullName>ENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backend_System__c</fullName>
        <description>The backend system the Lead&apos;s company uses.</description>
        <inlineHelpText>Which backend system does this Lead&apos;s company use?</inlineHelpText>
        <label>Backend System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AccuPOS</fullName>
                </value>
                <value>
                    <fullName>Authorize.NET</fullName>
                </value>
                <value>
                    <fullName>Booker</fullName>
                </value>
                <value>
                    <fullName>CAM Commerce</fullName>
                </value>
                <value>
                    <fullName>CAP Sellwise</fullName>
                </value>
                <value>
                    <fullName>Cegid</fullName>
                </value>
                <value>
                    <fullName>Celerant</fullName>
                </value>
                <value>
                    <fullName>Cin7</fullName>
                </value>
                <value>
                    <fullName>CloverStation</fullName>
                </value>
                <value>
                    <fullName>CounterPoint</fullName>
                </value>
                <value>
                    <fullName>easyPOS</fullName>
                </value>
                <value>
                    <fullName>FusionPOS</fullName>
                </value>
                <value>
                    <fullName>KeyStroke</fullName>
                </value>
                <value>
                    <fullName>LightSpeed</fullName>
                </value>
                <value>
                    <fullName>Magento</fullName>
                </value>
                <value>
                    <fullName>MicroBiz</fullName>
                </value>
                <value>
                    <fullName>Microsoft Dynamics</fullName>
                </value>
                <value>
                    <fullName>Milano</fullName>
                </value>
                <value>
                    <fullName>MINDBODY</fullName>
                </value>
                <value>
                    <fullName>MultiFlex</fullName>
                </value>
                <value>
                    <fullName>MYOB</fullName>
                </value>
                <value>
                    <fullName>NetSuite</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>POS Prophet Systems</fullName>
                </value>
                <value>
                    <fullName>QuickBooks</fullName>
                </value>
                <value>
                    <fullName>Retail Edge</fullName>
                </value>
                <value>
                    <fullName>Retail Pro</fullName>
                </value>
                <value>
                    <fullName>Revel</fullName>
                </value>
                <value>
                    <fullName>RICS</fullName>
                </value>
                <value>
                    <fullName>RunIt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Category__c</fullName>
        <description>To segment Accounts between Brands, Retailers, and Backend Systems.</description>
        <inlineHelpText>Is this Account a Brand, Retailer or Backend System?</inlineHelpText>
        <label>Business Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>Backend System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Source_2__c</fullName>
        <description>Copy of Competitor Source to Map to Account. Primary Lead Source maps to Contact.</description>
        <formula>TEXT(Competitor_Source__c)</formula>
        <label>Competitor Source 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Source__c</fullName>
        <description>Dependent on Lead Source being &quot;Competitor&quot;.</description>
        <inlineHelpText>Input when the Lead Source is Competitor.</inlineHelpText>
        <label>Competitor Source</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NuOrder</fullName>
                </value>
                <value>
                    <fullName>Le New Black</fullName>
                </value>
                <value>
                    <fullName>Ordre</fullName>
                </value>
                <value>
                    <fullName>Anatwine</fullName>
                </value>
                <value>
                    <fullName>Pepperi</fullName>
                </value>
                <value>
                    <fullName>Brandboom</fullName>
                </value>
                <value>
                    <fullName>Brandlab</fullName>
                </value>
                <value>
                    <fullName>INTURN</fullName>
                </value>
                <value>
                    <fullName>Monkey N Middle</fullName>
                </value>
                <value>
                    <fullName>Pop Market</fullName>
                </value>
                <value>
                    <fullName>Threadvine</fullName>
                </value>
                <value>
                    <fullName>Uppler</fullName>
                </value>
                <value>
                    <fullName>World on a Hanger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <description>Date of the last completed activity.</description>
        <formula>LastActivityDate</formula>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Authority__c</fullName>
        <description>Sales philosophy around the authority of a contact based on title seniority. Director title and above is considered &quot;Above The Line&quot;, where all others are &quot;Below The Line&quot;. The more Above The Line people you&apos;re talking to at your clients, the stronger the relationship and the more likely it is to close business with.</description>
        <formula>IF(ISBLANK(Title), IMAGE(&quot;/img/msg_icons/error16.png&quot;,&quot;NO JOB TITLE&quot;)+&quot; MISSING JOB TITLE&quot;, 

IF( 
OR( 
CONTAINS(Title, &quot;Head&quot;), 
CONTAINS(Title, &quot;Director&quot;), 
CONTAINS(Title, &quot;VP&quot;), 
CONTAINS(Title, &quot;CMO&quot;), 
CONTAINS(Title, &quot;Vice President&quot;), 
CONTAINS(Title, &quot;Chief&quot;), 
CONTAINS(Title, &quot;Founder&quot;), 
CONTAINS(Title, &quot;Managing Director&quot;), 
CONTAINS(Title, &quot;President&quot;), 
CONTAINS(Title, &quot;GM&quot;), 
CONTAINS(Title, &quot;COO&quot;), 
CONTAINS(Title, &quot;CFO&quot;), 
CONTAINS(Title, &quot;coo&quot;), 
CONTAINS(Title, &quot;cfo&quot;), 
CONTAINS(Title, &quot;cmo&quot;), 
CONTAINS(Title, &quot;director&quot;), 
CONTAINS(Title, &quot;vice president&quot;), 
CONTAINS(Title, &quot;vp&quot;), 
CONTAINS(Title, &quot;CEO&quot;), 
CONTAINS(Title, &quot;ceo&quot;), 
CONTAINS(Title, &quot;Direc.&quot;), 
CONTAINS(Title, &quot;Owner&quot;), 
CONTAINS(Title, &quot;head&quot;), 
CONTAINS(Title, &quot;president&quot;), 
CONTAINS(Title, &quot;managing director&quot;), 
CONTAINS(Title, &quot;gm&quot;), 
CONTAINS(Title, &quot;owner&quot;), 
CONTAINS(Title, &quot;direc.&quot;), 
CONTAINS(Title, &quot;dir.&quot;), 
CONTAINS(Title, &quot;chief&quot;), 
CONTAINS(Title, &quot;founder&quot;), 
CONTAINS(Title, &quot;Dir.&quot;) 
), 
IMAGE(&quot;/img/msg_icons/confirm16.png&quot;,&quot;ATL&quot;)+&quot; Above The Line&quot;, 
IMAGE(&quot;/img/msg_icons/warning16.png&quot;,&quot;BTL&quot;)+&quot; Below The Line&quot; 
))</formula>
        <inlineHelpText>Director title and above is considered &quot;Above The Line&quot;, where all others are &quot;Below The Line&quot;. The more Above The Line people you&apos;re talking to, the stronger the relationship and the more likely it is you&apos;ll close business.</inlineHelpText>
        <label>Lead Authority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Checkbox__c</fullName>
        <description>Maps to Account field Created From Converted Lead. Indicates Accounts created by Lead Conversions.</description>
        <formula>TRUE</formula>
        <label>Lead Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Counter__c</fullName>
        <description>For reporting. Look up &quot;Power of One&quot; Salesforce articles.</description>
        <formula>1</formula>
        <label>Lead Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source_2__c</fullName>
        <description>Copy of Lead Source to Map to Account. Primary Lead Source maps to Contact.</description>
        <formula>TEXT(LeadSource)</formula>
        <label>Lead Source 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status_Flag__c</fullName>
        <formula>CASE(TEXT(Status), 
&quot;New&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000HSPZ&quot;, &quot;New&quot;, 24, 24), 
&quot;Unqualified&quot;, IMAGE(&quot;/img/msg_icons/error24.png&quot;, &quot;Unqualified&quot;) , 
&quot;Working&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000HSOq&quot;,&quot;Working&quot;, 24, 24), 
&quot;Converted&quot;, IMAGE(&quot;/img/msg_icons/confirm24.png&quot;, &quot;Converted&quot;), 
&quot;Qualified&quot;, IMAGE(&quot;/img/msg_icons/confirm24.png&quot;, &quot;Converted&quot;), 
&quot;Nurturing&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01546000000HSPe&quot;,&quot;Nurturing&quot;, 24, 24), 
&quot;*Unhandled Lead Status Value*&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <description>Link to the Account&apos;s LinkedIn page.</description>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <description>Pulls the region from the User the Account Owner is referencing. For displaying on page layouts and in reports.</description>
        <formula>TEXT(Owner:User.Region__c)</formula>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_3_Brands_Retailers_1__c</fullName>
        <description>From web application form.</description>
        <inlineHelpText>From web application form.</inlineHelpText>
        <label>Top 3 Brands/Retailers (1)</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_3_Brands_Retailers_2__c</fullName>
        <description>From web application form.</description>
        <inlineHelpText>From web application form.</inlineHelpText>
        <label>Top 3 Brands/Retailers (2)</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_3_Brands_Retailers_3__c</fullName>
        <description>From web application form.</description>
        <inlineHelpText>From web application form.</inlineHelpText>
        <label>Top 3 Brands/Retailers (3)</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_GMV__c</fullName>
        <description>Total Gross Merchandise Value</description>
        <inlineHelpText>Total Gross Merchandise Value</inlineHelpText>
        <label>Total GMV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>The Type of Account this is; values based on Business Category.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Showroom</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Conglomerate</fullName>
                </value>
                <value>
                    <fullName>Department Store</fullName>
                </value>
                <value>
                    <fullName>Franchise</fullName>
                </value>
                <value>
                    <fullName>Specialty Store</fullName>
                </value>
                <value>
                    <fullName>E-Commerce</fullName>
                </value>
                <value>
                    <fullName>Off-Price</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>ERP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>-- BACKEND SYSTEM --</fullName>
                    <isActive>false</isActive>
                    <label>-- BACKEND SYSTEM --</label>
                </value>
                <value>
                    <fullName>-- BRAND --</fullName>
                    <isActive>false</isActive>
                    <label>-- BRAND --</label>
                </value>
                <value>
                    <fullName>-- RETAILER --</fullName>
                    <isActive>false</isActive>
                    <label>-- RETAILER --</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Activewear/Athleisure</fullName>
                </value>
                <value>
                    <fullName>Candles</fullName>
                </value>
                <value>
                    <fullName>Denim</fullName>
                </value>
                <value>
                    <fullName>Eyewear</fullName>
                </value>
                <value>
                    <fullName>Footwear</fullName>
                </value>
                <value>
                    <fullName>Fragrance</fullName>
                </value>
                <value>
                    <fullName>Gifts/Tech</fullName>
                </value>
                <value>
                    <fullName>Handbags &amp; Accessories</fullName>
                </value>
                <value>
                    <fullName>Hats</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Jewelry</fullName>
                </value>
                <value>
                    <fullName>Kids</fullName>
                </value>
                <value>
                    <fullName>Lingerie/Intimates</fullName>
                </value>
                <value>
                    <fullName>Mens</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
                <value>
                    <fullName>Outerwear</fullName>
                </value>
                <value>
                    <fullName>RTW</fullName>
                </value>
                <value>
                    <fullName>Sneakers</fullName>
                </value>
                <value>
                    <fullName>Streetwear</fullName>
                </value>
                <value>
                    <fullName>Surf/Skate</fullName>
                </value>
                <value>
                    <fullName>Swim</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Watches</fullName>
                </value>
                <value>
                    <fullName>Womens</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Brands__c</fullName>
        <description>The number of brands associated with the Brand Account --OR-- the number of brands carried by the Retailer Account. (Lead Version of Same Account Field for Mapping)</description>
        <inlineHelpText>How many brands are carried by (Retailer) or associated with (Brand) this Lead&apos;s company?</inlineHelpText>
        <label># of Brands</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Doors__c</fullName>
        <description>The number of physical locations this Lead&apos;s company has.</description>
        <inlineHelpText>How many doors (physical locations) does this Lead&apos;s company have?</inlineHelpText>
        <label># of Doors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Retailers__c</fullName>
        <description>The number of retailers carrying the Brand Account --OR-- the number of retailers associated with the Retailer Account (Lead Version of Same Account Field for Mapping)</description>
        <inlineHelpText>How many retailers are carried by (Brand) or associated with (Retailer) this Lead&apos;s company?</inlineHelpText>
        <label># of Retailers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_Status_Flag__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_Status_Flag__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Meeting_Scheduled_Leads_to_Convert</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_Status_Flag__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Meeting Scheduled</value>
        </filters>
        <label>All Meeting Scheduled Leads to Convert</label>
    </listViews>
    <listViews>
        <fullName>Brand_Lead_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Lead Queue</label>
        <queue>Lead_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brand_Queue_AUS_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Brand Queue - AUS</label>
        <queue>Brand_Queue_AUS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brand_Queue_EU_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Brand Queue - EU</label>
        <queue>Brand_Queue_EU</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brand_Queue_NA_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Brand Queue - NA</label>
        <queue>Brand_Queue_NA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Meeting_Scheduled_Leads_to_Convert</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_Status_Flag__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Region__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Meeting Scheduled</value>
        </filters>
        <label>My Meeting Scheduled Leads to Convert</label>
    </listViews>
    <listViews>
        <fullName>My_New_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_Status_Flag__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Region__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>My New Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Nurturing_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_Status_Flag__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Nurturing</value>
        </filters>
        <label>My Nurturing Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Qualified_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_Status_Flag__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Region__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Qualified</value>
        </filters>
        <label>My Qualified Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Working_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_Status_Flag__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Region__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Working</value>
        </filters>
        <label>My Working Leads</label>
    </listViews>
    <listViews>
        <fullName>Retail_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Retail Queue</label>
        <queue>Retail_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_Status_Flag__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Owner_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Backend_System</fullName>
        <active>true</active>
        <businessProcess>Master Process</businessProcess>
        <description>Potential POS or ERP partner.</description>
        <label>Backend System</label>
    </recordTypes>
    <recordTypes>
        <fullName>Brand_Prospect</fullName>
        <active>true</active>
        <businessProcess>Master Process</businessProcess>
        <description>[Prospect] Brand sold through Retailers and/or their own Retail stores.</description>
        <label>Brand - Prospect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retailer_Prospect</fullName>
        <active>true</active>
        <businessProcess>Master Process</businessProcess>
        <description>[Prospect] Retailer selling brands through their stores.</description>
        <label>Retailer - Prospect</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Cannot_Be_New_Status_Again</fullName>
        <active>true</active>
        <description>Once a Lead leaves the &quot;New&quot; Lead Status, it cannot be put back to &quot;New&quot;.</description>
        <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(Status),
ISPICKVAL(Status, &quot;New&quot;)
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Lead Status cannot move back to &quot;New&quot;.</errorMessage>
    </validationRules>
</CustomObject>